[package]
name = "goontunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basic
clap = { version = "4.5.4", features = ["env", "derive"] }
color-eyre = "0.6.3"
dirs = "5.0.1"
env_logger = "0.11.3"
eyre = "0.6.12"
futures = "0.3.30"
url = "2.5.0"
chrono = "*"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
lazy_static = "1.4.0"
strum = { version = "0.26.2", features = ["derive"] }
regex = "1.10.4"
linkify = "0.10.0" #extract urls from text
serde = "*"
serde_json = "*"

# matrix support
matrix-sdk = { version = "0.7.1", features = ["eyre", "e2e-encryption", "markdown"] }

# spotify support
rspotify = { version = "0.13.3", features = ["cli"] }

# discord support
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "chrono", "http"] } # disable default `framework` feature

# database support
surrealdb = {version = "2.0.3", features = ["kv-rocksdb", "kv-mem"]}
# surrealdb = {git = "https://github.com/surrealdb/surrealdb", version = "1.4.2", features = ["kv-rocksdb", "kv-mem"]}
# surrealdb-core = { git = "https://github.com/surrealdb/surrealdb" }

serde_with = "3.4.0"
async-trait = "0.1.64"
shellexpand = { version = "3.0.0", features = ["path"] }
hostname = "0.4.0"
postage = "0.5.0"
matrix-sdk-crypto = "0.7.0"
uuid = "1.3.0"
parking_lot = "0.12.1"
derive_more = "0.99.17"
tracing = "0.1.37"
derivative = "2.2.0"
itertools = "0.12.1"
async-stream = "0.3.5"
similar = "2.2.1"
deadqueue = "0.2.4"
bevy_ecs = "0.13.2"
derive-name = "1.1.0"
rustyline-async = "0.4.2"
matrix-sdk-sqlite = "0.7.0"
culpa = "1.0.2"
enum_extract = "0.1.1"
toml = "0.8.12"

[patch.crates-io]
# matrix-sdk needs this, which specifies old version of zeroize for weird compat reason : https://github.com/dalek-cryptography/x25519-dalek/commit/adbd0e37a414d2c8ce2e6008bf688101347f10ce
# see : https://github.com/dalek-cryptography/x25519-dalek/issues/92
# waiting on 2.0 : https://github.com/dalek-cryptography/x25519-dalek/issues/99
# x25519-dalek = { path = "forks/x25519-dalek" }
#surrealdb = { path = "forks/surrealdb/lib"}
#rspotify = { path = "forks/rspotify"}
serenity = { git="https://github.com/serenity-rs/serenity" }