[package]
name = "goontunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basic
clap = { version = "4.5.4", features = ["derive", "env"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
futures = "0.3.30"
url = "2.5.0"
chrono = "*"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
lazy_static = "1.4.0"
strum = { version = "0.26.2", features = ["derive"] }
regex = "1.10.4"
linkify = "0.10.0" #extract urls from text
serde = "*"
serde_json = "*"

# matrix support
matrix-sdk = { version = "0.7.1", features = ["eyre", "markdown"] }
matrix-sdk-crypto = "0.7.1"
matrix-sdk-sqlite = "0.7.1"
rspotify = { version = "0.13.3", features = ["cli"] }

# discord support
serenity = { version = "0.12.2", default-features = false, features = ["chrono", "client", "gateway", "model", "rustls_backend"] } # disable default `framework` feature

# database support
surrealdb = { version = "2.0.3", features = ["kv-mem", "kv-rocksdb"] }
serde_with = "3.4.0"
async-trait = "0.1.64"
shellexpand = { version = "3.0.0", features = ["path"] }
hostname = "0.4.0"
postage = "0.5.0"
parking_lot = "0.12.1"
tracing = "0.1.37"
derivative = "2.2.0"
itertools = "0.13.0"
similar = "2.2.1"
rustyline-async = "0.4.2"

culpa = "1.0.2"
enum_extract = "0.1.1"
kameo = "0.13.0"
async-condvar-fair = "1.0.1"
derive-where = "1.2.7"
rand = "0.8.5"
config = "0.14.1"
jaq-core = "2.0.0-delta"
jaq-json = { version = "1.0.0-delta", features = ["serde_json"] }
jaq-std = "2.0.0-delta"
type-map = "0.2.0"
derive-new = "0.7.0"
venator = "0.2.0"
json_diff_ng = "0.6.0"
clap_complete = { version = "4.5.38", features = ["unstable-dynamic"] }
#venator = "0.2.0"

[patch.crates-io]
# matrix-sdk needs this, which specifies old version of zeroize for weird compat reason : https://github.com/dalek-cryptography/x25519-dalek/commit/adbd0e37a414d2c8ce2e6008bf688101347f10ce
# see : https://github.com/dalek-cryptography/x25519-dalek/issues/92
# waiting on 2.0 : https://github.com/dalek-cryptography/x25519-dalek/issues/99
# x25519-dalek = { path = "forks/x25519-dalek" }
#surrealdb = { path = "forks/surrealdb/lib"}
#rspotify = { path = "forks/rspotify"}
serenity = { git="https://github.com/serenity-rs/serenity" }
jaq-core = { git="https://github.com/01mf02/jaq"}
jaq-std = { git="https://github.com/01mf02/jaq"}
jaq-json = { git="https://github.com/01mf02/jaq"}
